--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <!-- SearchFragment -->
     <string name="seek_a_profession">Busque por uma profissão</string>
     <string name="categories">Categorias</string>
+    <string name="easy_freelancer">Encontre facilidade para seu serviço</string>
 
 </resources>
