biometria funcional, Rever publicação

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="seek_a_profession">Busque por uma profissão</string>
     <string name="categories">Categorias</string>
     <string name="easy_freelancer">Encontre facilidade para seu serviço</string>
+    <string name="title_publish">Digite um Titulo</string>
 
 </resources>
