--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,10 +34,18 @@
     <string name="description">Descrição:</string>
     <string name="image">Imagem (opcional)</string>
     <string name="urgencia">Urgência:</string>
-    <string name="urgencia1">Baixa</string>
-    <string name="urgencia2">Média</string>
-    <string name="urgencia3">Alta</string>
     <string name="publish">Publicar</string>
+
+    <string-array name="urgency">
+        <item>Alta</item>
+        <item>Média</item>
+        <item>Alta</item>
+    </string-array>
+
+    <string-array name="qual_publication">
+        <item>Presencial</item>
+        <item>Online</item>
+    </string-array>
 
     <!-- List Professions  -->
     <string name="descriptions_profession_image">Imagens da Profissão</string>
