--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,50 +1,57 @@
 <resources>
-    <string name="app_name">JOBLINK</string>
+    <string name="app_name" translatable="false">JOBLINK</string>
 
     <!-- Strings Login -->
-    <string name="login">Faça Login</string>
-    <string name="enter_a_email">Digite seu email</string>
-    <string name="enter_a_password">Digite uma senha</string>
-    <string name="biometry">Biometria</string>
-    <string name="sign_in">Entrar</string>
-    <string name="forgot_your_password">Esqueceu sua senha ?</string>
-    <string name="create_an_account">Criar Conta</string>
+    <string name="login">Login</string>
+    <string name="enter_a_email">Type your email</string>
+    <string name="enter_a_password">Type your password</string>
+    <string name="biometry">Biometry</string>
+    <string name="sign_in">Login</string>
+    <string name="forgot_your_password">I forgot my password</string>
+    <string name="create_an_account">Create Account</string>
 
     <!-- Strings record choice  !-->
-    <string name="select">Ao selecionar o perfil, você será encaminhado(a) para a página escolhida.</string>
-    <string name="title_choice">Bem-vindo(a) ao JobLink!</string>
-    <string name="select_profile">Selecione o seu perfil.</string>
+    <string name="select">When selecting the profile, you will be forwarded to the chosen page.</string>
+    <string name="title_choice">Welcome to JobLink!</string>
+    <string name="select_profile">Select your profile.</string>
     <string name="freelancer">Freelancer</string>
-    <string name="client">Cliente</string>
+    <string name="client">Client</string>
 
     <!-- Strings de Cadastro -->
-    <string name="name">Nome Completo</string>
-    <string name="gender">Sexo</string>
-    <string name="birth_date_register">Data de Nascimento</string>
+    <string name="name">Full Name</string>
+    <string name="gender">Gender</string>
+    <string name="birth_date_register">Birth Date</string>
     <string name="cpf_register">Digite seu CPF</string>
-    <string name="address_register">Insira seu endereço</string>
-    <string name="email_register">E-mail</string>
-    <string name="password_register">Senha</string>
+    <string name="address_register">Enter your address</string>
+    <string name="email_register">Email</string>
+    <string name="password_register">Password</string>
 
     <!-- List Publication -->
-    <string name="contact">Entrar em Contato</string>
+    <string name="contact">Get in Touch</string>
 
     <!-- Strings de Publicação !-->
-    <string name="create_publication">Criar publicação</string>
-    <string name="description">Descrição:</string>
-    <string name="image">Imagem (opcional)</string>
-    <string name="urgencia">Urgência:</string>
-    <string name="urgencia1">Baixa</string>
-    <string name="urgencia2">Média</string>
-    <string name="urgencia3">Alta</string>
-    <string name="publish">Publicar</string>
+    <string name="create_publication">Create publish</string>
+    <string name="description">Description:</string>
+    <string name="image">Image (optional)</string>
+    <string name="urgencia">Urgency:</string>
+    <string name="urgencia1">Low</string>
+    <string name="urgencia2">Average</string>
+    <string name="urgencia3">High</string>
+    <string name="publish">Publish</string>
 
     <!-- List Professions  -->
-    <string name="descriptions_profession_image">Imagens da Profissão</string>
+    <string name="descriptions_profession_image">Profession Images</string>
 
     <!-- SearchFragment -->
-    <string name="seek_a_profession">Busque por uma profissão</string>
-    <string name="categories">Categorias</string>
-    <string name="easy_freelancer">Encontre facilidade para seu serviço</string>
+    <string name="seek_a_profession">Search for a professional</string>
+    <string name="categories">Categories</string>
+    <string name="easy_freelancer">Find ease for your service</string>
+
+    <!-- Menu  -->
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="message">Message</string>
+    <string name="profile">Profile</string>
+    <string name="logout">Logout</string>
 
 </resources>
